Final Polish: User provided JPEG icon and universal user icons

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -97,6 +97,6 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/icon/icon.png"
+  image_path: "assets/icon/icon.jpeg"
   adaptive_icon_background: "#6366F1"
-  adaptive_icon_foreground: "assets/icon/icon.png"
+  adaptive_icon_foreground: "assets/icon/icon.jpeg"
